# mcp-0ne

./: .gitignore  README.md  backends.json  pyproject.toml  requirements.txt  run.ps1  run.sh  setup.bat  setup.sh  test-api.js  test-api2.js  test-regex.js  ytData.json  ytPlayer.json
desktop/: electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json
desktop/playwright-report/: index.html
desktop/resources/: ico.ico.bak
desktop/scripts/: afterPack-win-rcedit.cjs
desktop/src/main/: index.ts
desktop/src/preload/: index.ts
desktop/src/renderer/: App.tsx  env.d.ts  index.html
desktop/src/renderer/components/: AddBackendModal.tsx  BackendCard.tsx  BackendGrid.tsx  ConfirmDialog.tsx  HeaderBar.tsx  ImportMcpJsonModal.tsx  StateBadge.tsx  StatsPanel.tsx  ToastContainer.tsx
desktop/src/renderer/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Select.tsx
desktop/src/renderer/lib/: api.ts
desktop/src/renderer/stores/: backend-store.ts  toast-store.ts
desktop/src/renderer/styles/: globals.css
desktop/src/renderer/types/: backend.ts
desktop/tests/: app.spec.ts  helpers.ts  import.spec.ts
mcp_0ne/: __init__.py  admin_tools.py  api.py  config.py  protocol.py  registry.py  server.py  stdio_server.py
mcp_0ne/backends/: __init__.py  base.py  http_backend.py  stdio_backend.py
